--- a/index.qmd
+++ b/index.qmd
@@ -8,19 +8,19 @@ title: "Hi, I'm Jonny De La Torre"
 ![](https://placehold.co/530x530?text=images/headshot.jpg){width=100% style="border-radius: 50%;"}
 :::
 ::: {.column width="70%" style="padding-left: 3rem;"}
-I'm a [your profession or area of focus]. I specialize in transforming complex information into clear, engaging, and actionable insights.
+I'm a [technical writer and digital marketer]. I specialize in transforming complex information into clear, engaging, and actionable insights.
 :::
 :::
 
 ## About Me
 
-I hold a <span class="highlight">[Your Degree or Current Program]</span> from [Your Institution].
+I hold a <span class="highlight">[Master's of Science in Digital Marketing]</span> from [Cal Poly Pomona].
 
 
 
 ## Let's Connect
 
-You can [email me](mailto:you@example.com) or connect on [LinkedIn](https://www.linkedin.com/in/your-profile).
+You can [email me](mailto:delatorre1@cpp.edu) or connect on [LinkedIn](https://www.linkedin.com/in/jonathan-de-la-torre-43a268198/).
 
 ---
 
