--- a/listings/04-6530 Statistics without borders Term Project.qmd
+++ b/listings/04-6530 Statistics without borders Term Project.qmd
@@ -1,9 +1,12 @@
 ---
 title: "Statistics Without Borders Term Project"  
 image: "https://placehold.co/600x400?text=Attribution+Model"
-categories: [Customer Behavior Analysis, Survey Design and Data Collection, Attitude Measurement and Segmentation, Statistical Techniques, Risk and Concern Analysis, Practical Insights and Recommendations, Data-Driven Analysis and Quantitative Methods, Predictive Modeling and Forecasting, Visual Exploration and Interpretation, Segmentation and Comparative Analysis Insights and Recommendations Based on Analytics]
+categories: [Customer Behavior Analysis, Survey Design & Data Collection, Attitude Measurement & Segmentation, Statistical Techniques, Risk & Concern Analysis, Practical Insights & Recommendations, Data-Driven Analysis & Quantitative Methods, Predictive Modeling & Forecasting, Visual Exploration & Interpretation, Segmentation & Comparative Analysis Insights & Recommendations Based on Analytics]
 index: 4
 ---
+
+### Link 
+[View Autonomous Stores Presentation](https://github.com/your-username/your-repository-name/blob/main/images/6300%20Autonomous%20Stores%20presentation.pptx.pdf)
 
 #### **Overview**  
 This project, titled "Statistics Without Borders: Survey Data Generation & Analysis," focused on understanding students' perceptions, usage, and concerns regarding generative AI tools at Cal Poly Pomona (CPP). Using a stratified survey approach, the study explored various aspects of AI interaction, including familiarity with AI tools, perceived risks, support needs, and differences in attitudes based on technical expertise. Key insights revealed significant concerns around data privacy, academic integrity, and critical thinking. The analysis also identified a strong demand for clear guidelines and training on effective AI usage.
