--- a/listings/01-6500  Baskin Robins Final Report.qmd
+++ b/listings/01-6500  Baskin Robins Final Report.qmd
@@ -8,6 +8,8 @@ categories: [Customer Behavior Analysis, Data Collection & Survey Design, Statis
 index: 1 
 
 ---
+### Link 
+[View Baskin-Robbins Project: Marketing Analytics Project](https://github.com/jonnydlt/6400/blob/main/images/6500%20%20Baskin%20Robins%20Final%20Report.pdf)
 
 #### **Overview**
 
