--- a/listings/03-6520 Forecasting Final Project.qmd
+++ b/listings/03-6520 Forecasting Final Project.qmd
@@ -5,7 +5,7 @@ categories: [Data-Driven Analysis & Quantitative Methods, Time Series Analysis, 
 index: 3
 ---
 ### Link 
-[View Autonomous Stores Presentation](https://github.com/your-username/your-repository-name/blob/main/images/6300%20Autonomous%20Stores%20presentation.pptx.pdf)
+[View Forecasting Final Project](https://github.com/jonnydlt/6400/blob/main/images/6520%20Forecasting%20Final%20Project.docx.pdf)
 
 #### **Overview**  
 This project focused on analyzing the Texas housing market using the "txhousing" dataset from ggplot2, covering the period from 2000 to 2015. Our primary objective was to forecast future housing prices and sales volumes in Texas, specifically within the top five counties identified by median price. By leveraging historical data and applying advanced forecasting techniques like ARIMA, we aimed to provide actionable insights for potential investors, highlighting trends, regional price differences, and market dynamics. The analysis identified consistent upward trends in housing prices, driven by strong demand and limited supply, with regional variations in market behavior.
