--- a/listings/04-6530 Statistics without borders Term Project.qmd
+++ b/listings/04-6530 Statistics without borders Term Project.qmd
@@ -8,7 +8,7 @@ index: 4
 #### **Overview**  
 This project, titled "Statistics Without Borders: Survey Data Generation & Analysis," focused on understanding students' perceptions, usage, and concerns regarding generative AI tools at Cal Poly Pomona (CPP). Using a stratified survey approach, the study explored various aspects of AI interaction, including familiarity with AI tools, perceived risks, support needs, and differences in attitudes based on technical expertise. Key insights revealed significant concerns around data privacy, academic integrity, and critical thinking. The analysis also identified a strong demand for clear guidelines and training on effective AI usage.
 
-### Link 
+#### **Link** 
 [View Statistics Without Borders Term Project Presentation](https://raw.githubusercontent.com/jonnydlt/6400/main/images/6530%20Statistics%20without%20borders%20Term%20Project.pdf)
 
 ::: {.columns}
