--- a/listings/01-6500  Baskin Robins Final Report.qmd
+++ b/listings/01-6500  Baskin Robins Final Report.qmd
@@ -1,18 +1,19 @@
 ---
 title: "Baskin-Robbins Project: Marketing Analytics Project"
 
-image:  "![](https://raw.githubusercontent.com/jonnydlt/6400/main/images/br.jpg)"
+image:  "https://placehold.co/600x400?text=Baskin-Robbins+Project"
 
 categories: [Customer Behavior Analysis, Data Collection & Survey Design, Statistical Techniques & Validation, Visualization Exploration & Interpretation, Insights & Recommendations Based on Analytics, Segmentation & Comparative Analysis] 
 
 index: 1 
-
 ---
+
 #### **Overview**
 
 This project aimed to analyze customer loyalty for Baskin-Robbins, focusing on identifying key factors that drive customer satisfaction and repeat business. Using survey data from 71 respondents, the study employed statistical techniques like regression analysis and chi-square tests to explore the impact of product quality, flavor variety, and seasonal offerings on customer loyalty. The analysis revealed that product quality significantly influenced customer retention, while seasonal flavors had minimal impact. The findings were used to provide actionable recommendations for Baskin-Robbins to enhance customer loyalty, such as prioritizing product quality and exploring new customer engagement strategies.
 
-#### **Link** 
+#### **Link**
+
 [View Baskin-Robbins Project: Marketing Analytics Project](https://raw.githubusercontent.com/jonnydlt/6400/main/images/6500%20%20Baskin%20Robins%20Final%20Report.pdf)
 
 ::::: columns
@@ -38,5 +39,3 @@ This project aimed to analyze customer loyalty for Baskin-Robbins, focusing on i
 -   Reporting and Presentation
 :::
 :::::
-
-
