--- a/listings/02-6300  Autonomous stores presentation.qmd
+++ b/listings/02-6300  Autonomous stores presentation.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Autonomous Stores Project"
-image: "![](images/Autonomous Stores Project.jpg)"
+image: "https://placehold.co/600x400?text=Autonomous+Stores+Project"
 categories: [Experimental Design, Customer Behavior Analysis, Behavioral Analysis, Advanced Statistical Methods, Customer Segmentation, Practical Recommendations, Segmentation & Comparative Analysis]
 index: 2
 ---
