--- a/resume/Resume.Rmd
+++ b/resume/Resume.Rmd
@@ -1,12 +1,11 @@
 ---
-name: First
-surname: Last
-position: "Your Role or Career Focus"
+name: Jonathan
+surname: De La Torre
+position: "Digital Marketer"
 phone: +1 (XXX) XXX-XXXX
-www: yourwebsite.com
-email: "you@example.com"
-github: your-github
-linkedin: your-linkedin
+www: https://jonnydlt.github.io/6400/
+email: "Delatorre1@cpp.edy"
+linkedin: https://www.linkedin.com/in/jonathan-de-la-torre-43a268198/
 date: "`r format(Sys.time(), '%B %Y')`"
 output: 
   vitae::latexcv:
@@ -37,22 +36,48 @@ library(tibble)
 
 # Professional Summary
 
-Motivated and detail-oriented marketing and analytics professional with a strong background in data interpretation, campaign strategy, and digital tools. Skilled in turning insights into action and communicating value across business teams.
+Motivated and detail-oriented marketing and analytics professional with a strong background in data analysis, digital marketing strategy, and technical writing. Proven experience in managing complex projects, producing clear technical documents, and leveraging digital tools to drive effective communication. Adept at collaborating cross-functionally to achieve objectives and deliver high-quality work under tight deadlines.
 
 # Technical Skills
 
-- **Programming Languages:** R, Python, SQL, etc.  
-- **Web Technologies:** HTML, CSS/SCSS, Quarto, CMS, Google Analytics, etc.
+- **Programming Languages:** R, SQL.
+- **Web Technologies:** HTML, CSS/SCSS, Quarto, Content Management Systems (CMS), Google Analytics, GTM (Google Tag Manager).
+- **Data Analysis Tools:** RStudio, Excel, Power BI, Tableau.
+- **Digital Marketing Tools:** SEO, SEM, Social Media Advertising, Email Marketing, A/B Testing.
+- **Survey and Research Platforms:** Qualtrics, Google Forms.
+- **Machine Learning & Statistical Methods:** Regression Analysis, Clustering, Forecasting, Conjoint Analysis.
+- **Documentation and Technical Writing:** Microsoft Word, Adobe Acrobat, Adobe Creative Cloud (Illustrator, Photoshop).
+- **Project Management:** Microsoft Teams, OneDrive, SharePoint.
+- **Soft Skills:** Strong communication, leadership, and teamwork capabilities.
 
 # Education
 
 ```{r}
+library(tibble)
+library(gt)
+
 tribble(
   ~ Degree, ~ Year, ~ College, ~ Institution,
-  "Master of [Your Field]", "20XX – Expected Graduation 20XX", "[Your School or Department]", "[Your University]",
-  "Bachelor of [Your Field]", "20XX – 20XX", "[Your School or Department]", "[Your University]"
+  "Master of Science in Digital Marketing", "2023 – Expected Graduation 2025", "College of Business Administration", "Cal Poly Pomona",
+  "Bachelor of Arts in English Literature and Language", "2015", "College of Letters, Arts, and Social Sciences", "California State Polytechnic University, Pomona"
 ) %>%
-  detailed_entries(Degree, Year, College, Institution)
+  gt() %>%
+  tab_header(
+    title = "Education",
+    subtitle = "Academic Qualifications"
+  ) %>%
+  cols_label(
+    Degree = "Degree",
+    Year = "Year",
+    College = "College / Department",
+    Institution = "Institution"
+  ) %>%
+  tab_style(
+    style = list(
+      cell_text(weight = "bold")
+    ),
+    locations = cells_title()
+  )
 ```
 
 # Work Experience
@@ -60,30 +85,96 @@ tribble(
 ```{r}
 tribble(
   ~ Years, ~ Company, ~ Duties, ~ Title,
-
-  "Month YYYY – Month YYYY", "Company or Organization Name",
+  
+  "December 2022 – Present", "Southern California Edison, Rosemead, CA",
   list(
-    "Summarize responsibility or achievement \\#1.",
-    "Highlight tools, technologies, or methods used.",
-    "Mention metrics, goals, or impact if possible.",
-    "Add communication or leadership responsibilities here."
+    "Exceed annual quota by writing, editing, and managing over 900 pages of technical documentation, including compliance narratives and program policy/procedure manuals.",
+    "Contribute to the timely completion of high-visibility regulatory deliverables, including the Income-Qualified Monthly Report, Income-Qualified Annual Report, and Energy Efficiency Annual Report.",
+    "Lead collaboration with regulatory affairs, legal counsel, program managers, and senior leadership to ensure reporting materials meet compliance standards, maintain data integrity, and are delivered accurately and on time.",
+    "Champion editorial quality and brand consistency by enforcing style guide standards and partnering with multiple teams to produce cohesive, audience-focused communications."
   ),
-  "Job Title",
+  "Technical Writer – Senior Specialist",
 
-  "Month YYYY – Month YYYY", "Another Company or Team",
+  "January 2022 – November 2022", "JMDiaz Inc, City of Industry, CA",
   list(
-    "Led a project or team focused on [insert focus].",
-    "Collaborated cross-functionally with [departments/roles].",
-    "Managed content, campaigns, or dashboards.",
-    "Contributed to strategic planning or reporting."
+    "Coordinated with multiple internal departments to draft project proposals and bids for submission to prospective clients.",
+    "Tracked and managed multiple projects, collaborating with experts across various disciplines to ensure feasibility and successful execution of proposals.",
+    "Provided technical writing support to the marketing department for website content and public relations materials.",
+    "Maintained internal documentation, including style guide standards, templates, and archived content."
   ),
-  "Job Title"
+  "Project Coordinator",
+
+  "June 2015 – December 2021", "Robert H. Peterson Company, City of Industry, CA",
+  list(
+    "Managed a comprehensive archive of over 900 digital records, including instruction manuals, addendums, and forms.",
+    "Collaborated with research and development teams to create clear, accurate product instructions for end-users.",
+    "Simultaneously managed multiple documentation projects, ensuring on-time delivery and compliance with internal standards.",
+    "Certified, monitored, and maintained over 1,300 state product certifications in Massachusetts."
+  ),
+  "Technical Writer",
+
+  "August 2014 – June 2015", "Robert H. Peterson Company, City of Industry, CA",
+  list(
+    "Created product line drawings and maintained visual documentation, focusing on fireplaces and outdoor fire features.",
+    "Revised technical documents based on feedback from customers and the technical writer team.",
+    "Performed office support duties, including clerical tasks and document management."
+  ),
+  "Intern",
+
+  "June 2014 – September 2014", "California State Polytechnic University, Pomona, CA",
+  list(
+    "Facilitated online interactions with incoming freshmen, providing guidance and feedback to improve writing skills.",
+    "Reviewed, edited, and provided detailed feedback on essays for over fifty students.",
+    "Implemented diverse tutoring techniques to accommodate different learning styles, promoting effective writing skills."
+  ),
+  "Early Start English Summer Tutor",
+
+  "September 2017 – September 2019", "Don Bosco Technical Institute Alumni Association",
+  list(
+    "Served as Secretary, recording minutes, creating agendas, and managing member communications.",
+    "Assisted in planning and coordinating events, including the annual alumni retreat and fundraising initiatives.",
+    "Tracked and reported event participation and alumni contributions to maintain association records."
+  ),
+  "Secretary",
+
+  "September 2015 – September 2017", "Don Bosco Technical Institute Alumni Association",
+  list(
+    "Mentored students in education and career planning, particularly in STEM fields.",
+    "Contributed to fundraising efforts to provide financial aid for qualified students.",
+    "Promoted and fostered a positive spirit in alumni to further increase involvement with the school."
+  ),
+  "Volunteer"
 
 ) %>%
-  detailed_entries(
-    what = Title,
-    when = Years,
-    with = Company,
-    why = Duties
-  )
+  gt() %>%
+  tab_header(
+    title = "Professional Experience and Volunteer Work",
+    subtitle = "Relevant Work and Community Contributions"
+  ) %>%
+  cols_label(
+    Title = "Title",
+    Years = "Years",
+    Company = "Organization / Company",
+    Duties = "Key Responsibilities"
+  ) %>%
+  cols_align(
+    align = "left",
+    columns = c(Title, Years, Company, Duties)
+  ) %>%
+  tab_style(
+    style = cell_text(weight = "bold", size = px(14)),
+    locations = cells_title()
+  ) %>%
+  tab_style(
+    style = cell_text(size = px(12)),
+    locations = cells_body()
+  ) %>%
+  tab_options(
+    table.width = px(800),
+    table.font.names = "Arial",
+    column_labels.font.size = px(12),
+    row.striping.include_table_body = TRUE
+  ) 
+
+
 ```
