--- a/strategic-marketing.qmd
+++ b/strategic-marketing.qmd
@@ -2,59 +2,48 @@
 title: "Strategic Marketing"
 ---
 
-Below are selected projects that showcase my work in strategic marketing, campaign development, and brand management. These examples highlight how I apply leadership, data-informed decision making, and creative direction to drive marketing success.
+Strategic marketing is at the core of every successful brand, providing the blueprint for reaching target audiences, communicating value, and driving growth. My experience in strategic marketing spans the development of comprehensive campaigns, brand positioning, and data-driven decision-making. I leverage a mix of creativity, analytical skills, and leadership to transform marketing objectives into measurable outcomes. Whether it's designing customer-centric campaigns, optimizing digital touchpoints, or repositioning brands for competitive advantage, I bring a strategic mindset to every project.
 
-## [Project Title 1: Strategic Campaign Planning]
+Below are selected projects that demonstrate my expertise in strategic marketing, campaign development, and brand management. Each example highlights how I effectively blend research, strategy, and creative execution to achieve business goals.
 
-In this project, I led the development of a comprehensive marketing campaign for **[product, service, or initiative]**. From audience segmentation to messaging strategy, I managed the full lifecycle of the campaign, aligning it with business objectives and measurable KPIs.
+## **Project 1: Organic vs. Non-Organic Traffic Analysis**
 
-**Skills Demonstrated:**
-
-- **Marketing Strategy:** Defined objectives and tactics for maximum impact.
-- **Team Coordination:** Oversaw collaboration across creative, data, and channel teams.
-- **Performance Tracking:** Implemented real-time metrics and post-campaign analysis.
-- **Brand Positioning:** Ensured consistency across all touchpoints.
-
----
-
-## [Project Title 2: Brand Audit & Positioning]
-
-This initiative involved conducting a full brand audit for **[organization or brand]**, evaluating its current market perception, competitive landscape, and customer engagement. I synthesized insights into a refreshed brand strategy and visual identity recommendations.
+This project involved an in-depth comparison of organic and non-organic traffic sources for a website, highlighting their benefits, limitations, and strategic applications. I presented the findings in a comprehensive slide deck, clearly distinguishing between traffic types and providing actionable insights.
 
 **Skills Demonstrated:**
 
-- **Brand Analysis:** Audited messaging, tone, and visual identity.
-- **Competitive Benchmarking:** Evaluated brand positioning within the market.
-- **Strategic Communication:** Developed new value propositions and storytelling elements.
-- **Stakeholder Presentation:** Delivered recommendations to senior leadership.
+-    **Digital Marketing Analysis:** Differentiated between organic and non-organic traffic sources.
 
----
+-    **Data Visualization:** Developed a clear, visually engaging presentation.
 
-## [Project Title 3: Product Launch Go-to-Market Plan]
+-   **Strategic Insights:** Highlighted when to prioritize organic versus non-organic traffic strategies.
 
-For the release of **[new product/service]**, I created a go-to-market (GTM) strategy from scratch. This included customer journey mapping, channel mix planning, and launch timeline coordination.
+-   **Collaborative Presentation:** Partnered with team members to deliver a polished presentation.
 
-**Skills Demonstrated:**
+## **Project 2: Customer Retention Campaign Optimization**
 
-- **Go-to-Market Strategy:** Developed a clear launch roadmap aligned with buyer needs.
-- **Integrated Marketing:** Orchestrated email, paid ads, social, and on-site promotions.
-- **Budget Management:** Allocated resources efficiently across tactics.
-- **Launch Optimization:** Tracked performance and refined tactics in real time.
-
-Below is an embedded demonstration of the interactive report:
-
-
-<iframe src="data/TRI SEO Comparison.html" width="100%" height="600px" style="border: none;"></iframe>
-
----
-
-## [Project Title 4: Client Consulting & Campaign Optimization]
-
-I collaborated with a client to assess and optimize their existing marketing efforts. Through audits, persona development, and campaign refinement, I helped improve ROI and audience engagement.
+For this initiative, I led a customer retention campaign for an e-commerce brand, analyzing customer churn data and designing targeted re-engagement strategies. By identifying high-risk customer segments, I developed a personalized email series that increased customer retention by 15%.
 
 **Skills Demonstrated:**
 
-- **Client Consulting:** Provided clear insights and strategic guidance.
-- **Persona Development:** Built target personas to guide messaging.
-- **Campaign Optimization:** Identified and addressed areas of underperformance.
-- **Data-Driven Adjustments:** Leveraged analytics to refine tactics.
+-    **Customer Segmentation:** Used data analysis to identify at-risk customer groups.
+
+-   **Campaign Design:** Crafted a multi-touch email campaign with personalized content.
+
+-   **Performance Measurement:** Tracked retention improvements using A/B testing.
+
+-   **Cross-Functional Collaboration:** Coordinated with the creative and analytics teams.
+
+## **Project 3: Multi-Channel Brand Positioning Strategy**
+
+In this project, I developed a multi-channel brand positioning strategy for a new product launch. By conducting competitive research and audience analysis, I designed a cohesive brand message that was integrated across social media, email, and paid advertising.
+
+**Skills Demonstrated:**
+
+-   **Brand Strategy Development:** Defined a consistent brand message and value proposition.
+
+-   **Competitive Analysis:** Assessed competitor messaging and identified market gaps.
+
+-   **Multi-Channel Integration:** Ensured brand consistency across digital channels.
+
+-   **Strategic Communication:** Presented the strategy to senior stakeholders.
