--- a/resume.qmd
+++ b/resume.qmd
@@ -24,9 +24,11 @@ Motivated and detail-oriented marketing and analytics professional with a strong
 
 | Degree | Year | College / Department | Institution |
 |------------------|------------------|-------------------|------------------|
-| Master of Science in Digital Marketing |[2023 – Expected Graduation 2025 | College of Business Administration | California State Polytechnic University, Pomona |
+| Master of Science in Digital Marketing | 2023 – Expected Graduation 2025 | College of Business Administration | California State Polytechnic University, Pomona |
 
-| Bachelor of Arts in English Literature and Language | 2010 – 2015 | College of Letters, Arts, and Social Sciences] | California State Polytechnic University, Pomona |
+| Master of Science in Digital Marketing | 2010 – 2015 | College of Letters, Arts, and Social Sciences | California State Polytechnic University, Pomona |
+
+|  |  |  | California State Polytechnic University, Pomona |
 
 # Work Experience
 
@@ -54,60 +56,51 @@ Motivated and detail-oriented marketing and analytics professional with a strong
 
 ------------------------------------------------------------------------
 
-### \[Technical Writer\], \[Robert H. Peterson Company\]
+### Technical Writer, Robert H. Peterson Company
 
-*\[07/2015 – 12/2021\]*
+*07/2015 – 12/2021*
 
--   \[Was in charge of upkeep for over 900 digital records, including instruction manuals, addendums, and misc forms\]
--   \[Collaborated cross-functionally with research and development team to create instructions for current products\]\
--   \[Managed multiple projects simultaneously while keeping deadlines in mind to ensure on time delivery\]
--   \[Certified, monitored, and applied for over 1300 state product certifications in the state of Massachusetts\]
--   \[Notified engineering, technical service, and warehouse workers of changes in instruction manuals\]
--   \[Coordinated with other companies to certify and translate manuals into three foreign languages\]
+-  [Was in charge of upkeep for over 900 digital records, including instruction manuals, addendums, and misc forms
+-  Collaborated cross-functionally with research and development team to create instructions for current products
+-  Managed multiple projects simultaneously while keeping deadlines in mind to ensure on time delivery
+-  Certified, monitored, and applied for over 1300 state product certifications in the state of Massachusetts
+-  Notified engineering, technical service, and warehouse workers of changes in instruction manuals
+-  Coordinated with other companies to certify and translate manuals into three foreign languages
 
 ---
 
-### [Technical Writer Intern], [Robert H. Peterson Company]  
-*[08/2014 – 06/2015]*
+### Technical Writer Intern, Robert H. Peterson Company  
+*08/2014 – 06/2015*
 
-- [Created line drawings and photos of products, with emphasis in fireplaces and outdoor fire features]
-- [Revised technical documents based on feedback from customers and technical writer team]  
-- [Performed office clerk and secretarial duties as requested by direct report manager] 
-- [Promoted and fostered a positive spirit in alumni to further increase involvement with the school]
+- Created line drawings and photos of products, with emphasis in fireplaces and outdoor fire features
+- Revised technical documents based on feedback from customers and technical writer team  
+- Performed office clerk and secretarial duties as requested by direct report manager
+- Promoted and fostered a positive spirit in alumni to further increase involvement with the school
 ---
 
-### \[Early Start English Summer Tutor\], \[California State Polytechnic University, Pomona\]
+### Early Start English Summer Tutor, California State Polytechnic University, Pomona
 
-*\[06/2014 – 09/2014\]*
+*06/2014 – 09/2014*
 
--   \[Facilitated online interactions with incoming freshman students in the early start English program\]
--   \[Reviewed, edited, and gave feedback on essays for over fifty students during summer program\]\
--   \[Implemented different tutoring styles and teaching methods to help students become efficient writers\]
+-   Facilitated online interactions with incoming freshman students in the early start English program
+-   Reviewed, edited, and gave feedback on essays for over fifty students during summer program
+-   Implemented different tutoring styles and teaching methods to help students become efficient writers
 
 ------------------------------------------------------------------------
 
 # Volunteer Experience
 
-### \[Don Bosco Technical Institute\], \[Alumni Association’s Secretary\]
+### Don Bosco Technical Institute, Alumni Association’s Secretary
+*09/2017 – 09/2019*
 
-*\[09/2017 – 09/2019\]*
+- Recorded minutes, created agendas for all meetings, and dispersed both minutes/agendas to all association members
+- Tracked and accounted for attendance, event participation, and alumni association board member donation amounts
+- Assisted committee with planning for the annual alumni retreat, golf tournament, and Black and Gold Gala
 
--   \[Recorded minutes, created agendas for all meetings, and dispersed both minutes/agendas to all association members\]\
+### Don Bosco Technical Institute, Alumni Association
 
--   \[Tracked and accounted for attendance, event participation, and alumni association board member donation amounts\]\
+*09/2015 – 09/2017*
 
--   
-
-    ## \[Assisted committee with planning for the annual alumni retreat, golf tournament, and Black and Gold Gala \]
-
-### \[Don Bosco Technical Institute\], \[Alumni Association\]
-
-*\[09/2015 – 09/2017\]*
-
--   \[Attended alumni meetings and assisted current students with planning their education and careers in STEM\]\
-
--   \[Assisted with raising financial aid funds for qualified students to provide equal access to education\]\
-
--   
-
-    ## \[Promoted and fostered a positive spirit in alumni to further increase involvement with the school\]
+-   Attended alumni meetings and assisted current students with planning their education and careers in STEM
+-   Assisted with raising financial aid funds for qualified students to provide equal access to education
+-   Promoted and fostered a positive spirit in alumni to further increase involvement with the school
