--- a/resume.qmd
+++ b/resume.qmd
@@ -2,7 +2,7 @@
 title: "Resume"
 ---
 
-You can view a PDF version of my resume [here](resume/resume.pdf){target="_blank"}
+You can view a PDF version of my resume [here](https://jonnydlt.github.io/6400/resume.pdf){target="_blank"}
 
 
 # Professional Summary
